--- a/environments/huggingface.yml
+++ b/environments/huggingface.yml
@@ -26,6 +26,7 @@ dependencies:
   - pip:
     - flask-cloudflared==0.0.10
     - flask-ngrok
+    - bitsandbytes==0.3.7
     - lupa==1.10
     - transformers==4.24.0
     - huggingface_hub>=0.10.1
